# other-agents

./: .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  conductor.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  ASYNC_TASK_ARCHITECTURE.md  CLI_EXTENSION_GUIDE.md  CLI_REFERENCE.md  CODE_REVIEW_V2.1.md  INSTRUCTIONS.md  INTEGRATION_GUIDE.md  REQUIREMENTS.md  SESSION_MODE_DESIGN.md  SYSTEM_PROMPT_INJECTION_GUIDE.md  USAGE_EXAMPLES.md
scripts/: install_deps.sh  run-mcp-inspector.sh  run_tests.sh
src/ai_cli_mcp/: file_handler.py  server.py
src/other_agents_mcp/: __init__.py  cli_manager.py  cli_registry.py  config.py  consensus.py  file_handler.py  logger.py  meeting_api.py  server.py  session_manager.py  sqlite_storage.py  task_manager.py
tests/: __init__.py  conftest.py  test_cli_manager.py  test_cli_registry.py  test_config.py  test_file_handler.py  test_file_handler_coverage.py  test_file_handler_mock.py  test_file_handler_priority1.py  test_security_validation.py  test_server_coverage.py  test_server_handlers.py  test_server_lifecycle.py  test_session_mode.py  test_sqlite_storage.py  test_task_manager_coverage.py
tests/mcp-validation/: collect_metrics.py  test_e2e_scenarios.py  test_mcp_protocol.py  test_tools_functionality.py
tests/mcp-validation/archive/obsolete/: NEW_SESSION_GUIDE.md  PHASE0_INSTALLATION_REPORT.md  SELF_CRITICAL_REVIEW.md  SESSION_SUMMARY.md
tests/scenarios/: test_scenario_session.py  test_scenario_sync_async.py
(+6 files in other folders)
